--- a/app/translations/messages.en.yaml
+++ b/app/translations/messages.en.yaml
@@ -62,6 +62,7 @@ subscription:
     past_due: "Past Due"
     canceled: "Canceled"
     unpaid: "Unpaid"
+    info: "Info"
   plan:
     type: "Plan Type"
   current_period_start: "Current Period Start"
@@ -85,15 +86,13 @@ subscription:
     date: "Date"
     amount: "Amount"
     plan: "Plan"
-    status: "Status"
+    status_label: "Status"
     id: "Payment ID"
     status:
       succeeded: "Succeeded"
       failed: "Failed"
       pending: "Pending"
       canceled: "Canceled"
-  status:
-    info: "Info"
 
 admin:
   account:
@@ -170,3 +169,76 @@ admin:
       warning: "⚠️ Warning"
       count: "Found %count% failed events"
       none: "No failed events found"
+
+card:
+  create:
+    title: "Create Digital Card"
+    button: "Create Card"
+  edit:
+    title: "Edit Card"
+  delete:
+    confirm: "Are you sure you want to delete this card?"
+  list:
+    title: "My Cards"
+    empty: "You haven't created any cards yet."
+  save: "Save"
+  cancel: "Cancel"
+  back_to_list: "Back to Cards"
+  public_url: "Public URL"
+  created_at: "Created"
+  updated:
+    success: "Card updated successfully"
+  deleted:
+    success: "Card deleted successfully"
+  created:
+    success: "Card created successfully. Public URL: /c/%slug%"
+  unnamed: "Unnamed Card"
+  quota:
+    exceeded: "You have reached your quota limit. Upgrade your plan to create more cards."
+    info: "Quota"
+  form:
+    name: "Name"
+    email: "Email"
+    phone: "Phone"
+    company: "Company"
+    title: "Job Title"
+    bio: "Bio"
+    website: "Website"
+  social:
+    title: "Social Media"
+  name:
+    placeholder: "Your full name"
+    required: "Name is required"
+    max_length: "Name cannot exceed 255 characters"
+  email:
+    placeholder: "your.email@example.com"
+    invalid: "Please enter a valid email address"
+  phone:
+    placeholder: "+1234567890"
+    max_length: "Phone cannot exceed 50 characters"
+  company:
+    placeholder: "Company Name"
+    max_length: "Company name cannot exceed 255 characters"
+  title:
+    placeholder: "Your job title"
+    max_length: "Job title cannot exceed 255 characters"
+  bio:
+    placeholder: "Tell us about yourself..."
+    max_length: "Bio cannot exceed 1000 characters"
+  website:
+    placeholder: "https://yourwebsite.com"
+    invalid: "Please enter a valid URL"
+  linkedin:
+    placeholder: "https://linkedin.com/in/yourprofile"
+    invalid: "Please enter a valid LinkedIn URL"
+  twitter:
+    placeholder: "https://twitter.com/yourhandle"
+    invalid: "Please enter a valid Twitter URL"
+  slug:
+    invalid_format: "Slug must contain only lowercase letters, numbers, and hyphens"
+  public:
+    title: "Digital Card"
+  qr_code:
+    title: "QR Code"
+    view: "View QR Code"
+    instructions: "Scan this QR code with your mobile device to view this card"
