--- a/app/translations/messages.fr.yaml
+++ b/app/translations/messages.fr.yaml
@@ -242,3 +242,65 @@ card:
     title: "Code QR"
     view: "Voir le Code QR"
     instructions: "Scannez ce code QR avec votre appareil mobile pour voir cette carte"
+
+branding:
+  title: "Configuration du Branding"
+  access_denied: "La personnalisation du branding est uniquement disponible pour les plans Pro et Entreprise"
+  upgrade: "Mettre à Niveau"
+  colors:
+    title: "Couleurs de Marque"
+  primary_color: "Couleur Principale"
+  secondary_color: "Couleur Secondaire"
+  logo:
+    title: "Logo"
+    position: "Position du Logo"
+    size: "Taille du Logo"
+    remove: "Supprimer le Logo"
+    remove.confirm: "Êtes-vous sûr de vouloir supprimer le logo ?"
+    position.top_left: "Haut Gauche"
+    position.top_center: "Haut Centre"
+    position.top_right: "Haut Droite"
+    position.center: "Centre"
+    position.bottom_left: "Bas Gauche"
+    position.bottom_center: "Bas Centre"
+    position.bottom_right: "Bas Droite"
+    size.small: "Petit"
+    size.medium: "Moyen"
+    size.large: "Grand"
+  save: "Enregistrer le Branding"
+  save.success: "Configuration du branding enregistrée avec succès"
+  template:
+    title: "Template Personnalisé (Entreprise Uniquement)"
+    description: "Personnalisez le template de votre page de carte publique. Votre template doit étendre 'public/card.html.twig' et peut surcharger des blocs spécifiques."
+    content: "Contenu du Template"
+    save: "Enregistrer le Template"
+    save.success: "Template personnalisé enregistré avec succès"
+    save.error: "Échec de l'enregistrement du template. Veuillez vérifier la syntaxe du template."
+    reset: "Réinitialiser au Template par Défaut"
+    reset.confirm: "Êtes-vous sûr de vouloir réinitialiser votre template personnalisé ? Cette action ne peut pas être annulée."
+    reset.success: "Template réinitialisé au template par défaut avec succès"
+    reset.error: "Échec de la réinitialisation du template"
+    too_large: "Le contenu du template ne doit pas dépasser 50KB"
+  logo.remove.success: "Logo supprimé avec succès"
+  reset: "Réinitialiser Tout le Branding"
+  reset.success: "Configuration du branding réinitialisée avec succès"
+  reset.error: "Échec de la réinitialisation de la configuration du branding"
+  reset.confirm: "Êtes-vous sûr de vouloir réinitialiser toute la configuration du branding ? Cela supprimera les couleurs, le logo et les templates personnalisés. Cette action ne peut pas être annulée."
+  reset.confirmation_required: "Vous devez confirmer pour réinitialiser la configuration du branding"
+  color.invalid_format: "La couleur doit être au format hexadécimal (#RRGGBB)"
+  logo.invalid_type: "Le logo doit être un fichier PNG, JPG, JPEG ou SVG"
+  logo.too_large: "La taille du fichier logo ne doit pas dépasser 5MB"
+  logo.position.invalid: "Position du logo invalide"
+  logo.size.invalid: "Taille du logo invalide"
+  template.invalid_syntax: "Syntaxe Twig du template invalide"
+  template.must_extend_base: "Le template doit étendre 'public/card.html.twig'"
+  template.dangerous_function: "Le template contient des fonctions dangereuses"
+  template.access_denied: "La personnalisation des templates est uniquement disponible pour les plans Entreprise"
+  validation.error: "Veuillez corriger les erreurs ci-dessous"
+  upload.error: "L'upload du logo a échoué. Veuillez réessayer."
+  color:
+    accessibility:
+      warning:
+        primary: "Avertissement : Le ratio de contraste de la couleur principale est de %s:1 (%s). Pour une meilleure accessibilité, visez au moins 4,5:1 (WCAG AA) ou 7:1 (WCAG AAA)."
+        secondary: "Avertissement : Le ratio de contraste de la couleur secondaire est de %s:1 (%s). Pour une meilleure accessibilité, visez au moins 4,5:1 (WCAG AA) ou 7:1 (WCAG AAA)."
+      info: "Le contraste des couleurs respecte les standards d'accessibilité WCAG"
