:sparkles: Add multi-user support with team roles and card assignments

--- a/app/translations/messages.en.yaml
+++ b/app/translations/messages.en.yaml
@@ -242,6 +242,24 @@ card:
     title: "QR Code"
     view: "View QR Code"
     instructions: "Scan this QR code with your mobile device to view this card"
+  assignments:
+    title: "Card Assignments"
+    description: "Assign this card to team members so they can manage it"
+    current: "Current Assignments"
+    team_members: "Team Members"
+    assign.submit: "Assign Card"
+    assign: "Assign Card"
+    unassign: "Unassign"
+    unassign.confirm: "Are you sure you want to unassign this card from this team member?"
+    assign.success: "Card assigned to team member(s) successfully"
+    success: "Card assigned to team member(s) successfully"
+    removed: "Card assignment removed successfully"
+    unassign.success: "Card assignment removed successfully"
+    assign.denied: "You do not have permission to assign this card"
+    none: "No assignments"
+    count: "cards"
+  access:
+    denied: "You do not have access to this card"
 
 branding:
   title: "Branding Configuration"
@@ -304,3 +322,66 @@ branding:
         primary: "Warning: Primary color contrast ratio is %s:1 (%s). For better accessibility, aim for at least 4.5:1 (WCAG AA) or 7:1 (WCAG AAA)."
         secondary: "Warning: Secondary color contrast ratio is %s:1 (%s). For better accessibility, aim for at least 4.5:1 (WCAG AA) or 7:1 (WCAG AAA)."
       info: "Color contrast meets WCAG accessibility standards"
+
+team:
+  title: "Team Management"
+  access_denied: "Team features are only available for Enterprise plans"
+  upgrade: "Upgrade to Enterprise"
+  members:
+    title: "Team Members"
+    email: "Email"
+    role: "Role"
+    status: "Status"
+    joined: "Joined"
+    last_activity: "Last Activity"
+    actions: "Actions"
+    empty: "No team members yet"
+    count: "Team Members (%count%)"
+    no_activity: "No activity yet"
+    assigned_by: "Assigned by"
+  invite:
+    title: "Invite Team Member"
+    email: "Email Address"
+    role: "Role"
+    submit: "Send Invitation"
+    success: "Team member invitation sent successfully"
+    duplicate: "This user has already been invited to this team"
+    invalid_email: "Invalid email address"
+    rate_limit_hour: "Rate limit exceeded: Maximum 10 invitations per hour. Please try again later."
+    rate_limit_day: "Rate limit exceeded: Maximum 50 invitations per day. Please try again tomorrow."
+    cannot_resend: "Cannot resend invitation: invitation is not in pending status"
+    resend: "Resend Invitation"
+    resend.success: "Invitation resent successfully"
+  role:
+    admin: "Administrator"
+    member: "Member"
+    change: "Change Role"
+    change.submit: "Update Role"
+    change.success: "Team member role updated successfully"
+    change.denied: "Only account owners can change team member roles"
+  remove: "Remove"
+  remove.confirm: "Are you sure you want to remove this team member? They will lose access to all account resources."
+  remove.success: "Team member removed successfully"
+  remove.denied: "Only account owners can remove team members"
+  invitation:
+    title: "Team Invitation"
+    message: "You have been invited to join the team for account: %account%"
+    role: "Role: %role%"
+    login_required: "You must be logged in to accept this invitation"
+    login: "Log In"
+    email_mismatch: "This invitation was sent to %expected%, but you are logged in as %actual%. Please log in with the correct email address."
+    accept: "Accept Invitation"
+    decline: "Decline Invitation"
+    expired: "This invitation has expired. Please contact the account owner for a new invitation."
+    already_processed: "This invitation has already been processed"
+    invalid: "Invalid or already processed invitation"
+    accept.success: "You have successfully joined the team"
+    decline.success: "Invitation declined"
+  status:
+    pending: "Pending"
+    accepted: "Accepted"
+    declined: "Declined"
+    expired: "Expired"
+    revoked: "Revoked"
+  can_manage: "You can manage team members"
+  cannot_manage: "You do not have permission to manage team members"
