--- a/app/translations/messages.fr.yaml
+++ b/app/translations/messages.fr.yaml
@@ -242,6 +242,24 @@ card:
     title: "Code QR"
     view: "Voir le Code QR"
     instructions: "Scannez ce code QR avec votre appareil mobile pour voir cette carte"
+  assignments:
+    title: "Assignations de Cartes"
+    description: "Assignez cette carte aux membres d'équipe pour qu'ils puissent la gérer"
+    current: "Assignations Actuelles"
+    team_members: "Membres d'Équipe"
+    assign.submit: "Assigner la Carte"
+    assign: "Assigner la Carte"
+    unassign: "Désassigner"
+    unassign.confirm: "Êtes-vous sûr de vouloir désassigner cette carte de ce membre d'équipe ?"
+    assign.success: "Carte assignée aux membres d'équipe avec succès"
+    success: "Carte assignée aux membres d'équipe avec succès"
+    removed: "Assignation de carte supprimée avec succès"
+    unassign.success: "Assignation de carte supprimée avec succès"
+    assign.denied: "Vous n'avez pas la permission d'assigner cette carte"
+    none: "Aucune assignation"
+    count: "cartes"
+  access:
+    denied: "Vous n'avez pas accès à cette carte"
 
 branding:
   title: "Configuration du Branding"
@@ -304,3 +322,66 @@ branding:
         primary: "Avertissement : Le ratio de contraste de la couleur principale est de %s:1 (%s). Pour une meilleure accessibilité, visez au moins 4,5:1 (WCAG AA) ou 7:1 (WCAG AAA)."
         secondary: "Avertissement : Le ratio de contraste de la couleur secondaire est de %s:1 (%s). Pour une meilleure accessibilité, visez au moins 4,5:1 (WCAG AA) ou 7:1 (WCAG AAA)."
       info: "Le contraste des couleurs respecte les standards d'accessibilité WCAG"
+
+team:
+  title: "Gestion d'Équipe"
+  access_denied: "Les fonctionnalités d'équipe sont uniquement disponibles pour les plans Entreprise"
+  upgrade: "Passer à Entreprise"
+  members:
+    title: "Membres d'Équipe"
+    email: "Email"
+    role: "Rôle"
+    status: "Statut"
+    joined: "Rejoint"
+    last_activity: "Dernière Activité"
+    actions: "Actions"
+    empty: "Aucun membre d'équipe pour le moment"
+    count: "Membres d'Équipe (%count%)"
+    no_activity: "Aucune activité pour le moment"
+    assigned_by: "Assigné par"
+  invite:
+    title: "Inviter un Membre d'Équipe"
+    email: "Adresse Email"
+    role: "Rôle"
+    submit: "Envoyer l'Invitation"
+    success: "Invitation de membre d'équipe envoyée avec succès"
+    duplicate: "Cet utilisateur a déjà été invité dans cette équipe"
+    invalid_email: "Adresse email invalide"
+    rate_limit_hour: "Limite de débit dépassée : Maximum 10 invitations par heure. Veuillez réessayer plus tard."
+    rate_limit_day: "Limite de débit dépassée : Maximum 50 invitations par jour. Veuillez réessayer demain."
+    cannot_resend: "Impossible de renvoyer l'invitation : l'invitation n'est pas en attente"
+    resend: "Renvoyer l'invitation"
+    resend.success: "Invitation renvoyée avec succès"
+  role:
+    admin: "Administrateur"
+    member: "Membre"
+    change: "Changer le Rôle"
+    change.submit: "Mettre à Jour le Rôle"
+    change.success: "Rôle du membre d'équipe mis à jour avec succès"
+    change.denied: "Seuls les propriétaires de compte peuvent changer les rôles des membres d'équipe"
+  remove: "Supprimer"
+  remove.confirm: "Êtes-vous sûr de vouloir supprimer ce membre d'équipe ? Il perdra l'accès à toutes les ressources du compte."
+  remove.success: "Membre d'équipe supprimé avec succès"
+  remove.denied: "Seuls les propriétaires de compte peuvent supprimer les membres d'équipe"
+  invitation:
+    title: "Invitation d'Équipe"
+    message: "Vous avez été invité à rejoindre l'équipe du compte : %account%"
+    role: "Rôle : %role%"
+    login_required: "Vous devez être connecté pour accepter cette invitation"
+    login: "Se Connecter"
+    email_mismatch: "Cette invitation a été envoyée à %expected%, mais vous êtes connecté en tant que %actual%. Veuillez vous connecter avec la bonne adresse email."
+    accept: "Accepter l'Invitation"
+    decline: "Refuser l'Invitation"
+    expired: "Cette invitation a expiré. Veuillez contacter le propriétaire du compte pour une nouvelle invitation."
+    already_processed: "Cette invitation a déjà été traitée"
+    invalid: "Invitation invalide ou déjà traitée"
+    accept.success: "Vous avez rejoint l'équipe avec succès"
+    decline.success: "Invitation refusée"
+  status:
+    pending: "En Attente"
+    accepted: "Accepté"
+    declined: "Refusé"
+    expired: "Expiré"
+    revoked: "Révoqué"
+  can_manage: "Vous pouvez gérer les membres d'équipe"
+  cannot_manage: "Vous n'avez pas la permission de gérer les membres d'équipe"
